@@ -119,20 +119,20 @@ static int CDAudio_GetAudioDiskInfo(void)
 	return 0;
 }
 
-void CDAudio_Play(byte track, qboolean looping)
+int CDAudio_Play(byte track, qboolean looping)
 {
 	struct ioc_read_toc_entry entry;
 	struct cd_toc_entry toc_buffer;
 	struct ioc_play_track ti;
 
 	if (cdfile == -1 || !enabled)
-		return;
+		return -1;
 
 	if (!cdValid)
 	{
 		CDAudio_GetAudioDiskInfo();
 		if (!cdValid)
-			return;
+			return -1;
 	}
 
 	track = remap[track];
@@ -140,7 +140,7 @@ void CDAudio_Play(byte track, qboolean looping)
 	if (track < 1 || track > maxTrack)
 	{
 		Con_DPrintf("CDAudio: Bad track number %u.\n", track);
-		return;
+		return -1;
 	}
 
 	/* don't try to play a non-audio track */
@@ -153,18 +153,18 @@ void CDAudio_Play(byte track, qboolean looping)
 	if (ioctl(cdfile, CDIOREADTOCENTRYS, &entry) == -1)
 	{
 		IOCTL_FAILURE(CDIOREADTOCENTRYS);
-		return;
+		return -1;
 	}
 	if (toc_buffer.control & CDROM_DATA_TRACK)
 	{
 		Con_Printf("CDAudio: track %i is not audio\n", track);
-		return;
+		return -1;
 	}
 
 	if (playing)
 	{
 		if (playTrack == track)
-			return;
+			return 0;
 		CDAudio_Stop();
 	}
 
@@ -176,11 +176,14 @@ void CDAudio_Play(byte track, qboolean looping)
 	if (ioctl(cdfile, CDIOCPLAYTRACKS, &ti) == -1)
 	{
 		IOCTL_FAILURE(CDIOCPLAYTRACKS);
-		return;
+		return -1;
 	}
 
 	if (ioctl(cdfile, CDIOCRESUME) == -1)
+	{
 		IOCTL_FAILURE(CDIOCRESUME);
+		return -1;
+	}
 
 	playLooping = looping;
 	playTrack = track;
@@ -188,6 +191,8 @@ void CDAudio_Play(byte track, qboolean looping)
 
 	if (bgmvolume.value == 0) /* don't bother advancing */
 		CDAudio_Pause ();
+
+	return 0;
 }
 
 void CDAudio_Stop(void)
